@@ -1,5 +1,10 @@
 2008-11-28  Neil Roberts  <neil@linux.intel.com>
 
+	* tests/conform/test-backface-culling.c (TEXTURE_SIZE): Don't set
+	to a funny size on GLES because it will break cogl_texture_polygon
+
+2008-11-28  Neil Roberts  <neil@linux.intel.com>
+
 	* tests/conform/test-backface-culling.c: New test for backface
 	culling
 
